<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/all_layout_padding"
    android:clipToPadding="false"
    android:background="@color/background_base"
    tools:context=".expenselist.sendmessage.SendMessageActivity">
    <TextView
        android:id="@+id/page_title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/send_message_title"
        android:textStyle="bold"
        android:textSize="@dimen/all_header_text_size"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/info_menu_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_title_textview"
        android:text="@string/send_message_menu"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/result_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_menu_textview"
        app:layout_constraintBottom_toTopOf="@id/send_message_button"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintVertical_bias="0"
        android:background="@drawable/all_background_frame"
        app:layout_constrainedHeight="true"
        android:padding="10dp"
        android:elevation="@dimen/all_container_elevation"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/info_content_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constrainedHeight="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/divider_view"
            tools:listitem="@layout/item_member_expense"
            />
        <View
            android:id="@+id/divider_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/send_message_line_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/total_price_menu_textview"
            android:layout_marginVertical="10dp"
            android:background="@color/black"
            />
        <TextView
            android:id="@+id/total_price_menu_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/total_price_content_textview"
            app:layout_constraintTop_toBottomOf="@id/info_content_recyclerview"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/send_message_total_price_menu"
            android:textSize="@dimen/send_message_menu_text_size"
            />

        <TextView
            android:id="@+id/total_price_content_textview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@id/total_price_menu_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/total_price_menu_textview"
            app:layout_constraintBottom_toBottomOf="@id/total_price_menu_textview"
            android:text="@string/send_message_total_price_value"
            android:textSize="@dimen/send_message_menu_text_size"
            android:textAlignment="viewEnd"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/send_message_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/all_bottom_button_height"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/send_message_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/send_message_menu_text_size"
        android:background="@drawable/all_background_button"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
