<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".expenselist.ExpenseListFragment">

    <data>
        <variable
            name="viewModel"
            type="com.kappzzang.jeongsan.expenselist.viewmodel.ExpenseListOnCalculationPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/total_expense_explain_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/expenselist_total_expense_explain"
            android:textSize="@dimen/expense_list_subtitle_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/my_total_expense_explain_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/parent" />

        <TextView
            android:id="@+id/total_expense_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textSize="@dimen/expense_list_subtitle_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/total_expense_explain_textview"
            app:layout_constraintStart_toEndOf="@id/total_expense_explain_textview"
            app:layout_constraintTop_toTopOf="@id/parent"
            tools:text="@{viewModel.uiData.totalPriceText}" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/expense_chip_group_chipgroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:checkableBehavior="single"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/total_expense_explain_textview">

            <com.google.android.material.chip.Chip
                android:id="@+id/all_expense_chip"
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/expenselist_all_expense"
                app:checkedIconVisible="false"
                android:onClick="@{()->viewModel.clickAllExpensesChipButton()}"
                app:chipBackgroundColor="@drawable/expense_list_chip_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/unconfirmed_expense_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/expenselist_unconfirmed_expense"
                app:checkedIconVisible="false"
                android:onClick="@{()->viewModel.clickOnlyNotConfirmedExpensesChipButton()}"
                app:chipBackgroundColor="@drawable/expense_list_chip_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/confirmed_expense_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/expenselist_confirmed_expense"
                app:checkedIconVisible="false"
                android:onClick="@{()->viewModel.clickOnlyConfirmedExpensesChipButton()}"
                app:chipBackgroundColor="@drawable/expense_list_chip_color" />

        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:padding="5dp"
            android:clipToPadding="false"
            android:id="@+id/expense_list_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expense_chip_group_chipgroup"
            expenseItems="@{viewModel.uiData}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
